--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "bcrypt": "^5.1.1",
+    "ejs": "^3.1.10",
+    "ejs-mate": "^4.0.0",
     "express": "^4.21.2",
+    "mongoose": "^8.9.4",
     "mongosh": "^2.3.8"
   }
 }
