--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   "description": "",
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
     "ejs": "^3.1.10",
     "ejs-mate": "^4.0.0",
     "express": "^4.21.2",
+    "express-session": "^1.18.1",
     "mongoose": "^8.9.4",
     "mongosh": "^2.3.8"
   }
